--- a/style.css
+++ b/style.css
@@ -1,29 +1,41 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .box {
     display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(238, 187, 195);
+    justify-content: space-between;
+    background-color: rgb(3, 65, 30);
+    margin: 0%;
 }
 .boxy {
     display: block;
+    color:bisque;
+    font-family: 'Times New Roman', Times, serif;
 }
-
-
 
 video {
     margin: 20px;
+    margin-right: 80px;
 }
 
 p {
-    font-size: 24px;
-    width: 800px;
+    font-size: 28px;
+    width: 1100px;
+    margin-left: 90px;
 }
 h2 {
+    margin-top: 20px;
     font-size: 48px;
-    width: 800px;
+    width: 1100px;
+    margin-left: 90px;
 }
 #cute {
     width:350px;
     height:350px;
+    border: 20px solid rgb(250, 218, 222);
+    border-radius: 50%;
 }
 .images {
     display: flex;
@@ -31,10 +43,15 @@ h2 {
     background-color: rgb(250, 218, 222);
 }
 .prebox {
-    background-color: blanchedalmond;
-    
+    background-color: rgb(255, 205, 247);
 }
 h1 {
-    font-size: 24;
+    font-size: 24px;
     font-family: 'Times New Roman', Times, serif;
+    margin-left: 90px;
+}
+h3 {
+    font-size: 78px;
+    text-align: center;
+    background-color:  rgb(250, 218, 222) ;
 }
