--- a/diffroses/roses.css
+++ b/diffroses/roses.css
@@ -3,7 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+.font {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+}
 .header {
     background-color: #1f2937;
     width: 100%;
+    padding: 6px;
+}
+h1 {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-left: 160px;
 }
